--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
+    "react-slick": "^0.29.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
