--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@heroicons/react": "^2.0.18",
     "@ramonak/react-progress-bar": "^5.0.3",
     "font-awesome": "^4.7.0",
+    "i18next": "^23.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
     "nuka-carousel": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2",
+    "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
