--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@ramonak/react-progress-bar": "^5.0.3",
+    "aos": "^3.0.0-beta.6",
     "font-awesome": "^4.7.0",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
