--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/react": "^2.0.18",
     "@ramonak/react-progress-bar": "^5.0.3",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.5.1",
+    "firebase": "^10.4.0",
     "font-awesome": "^4.7.0",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
@@ -30,6 +32,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
