--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "react-whatsapp": "^0.3.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.32"
   },
