--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-toastify": "^9.1.3",
     "react-whatsapp": "^0.3.0",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.32"
+    "sweetalert2": "^11.7.32",
+    "swiper": "^11.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
